# fys-backend

./: .env.example  .gitignore  pyproject.toml  requirements.txt  zilliz-cloud-Free-01-username-password.txt
app/: main.py
app/config/: settings.py
app/core/: models.py
app/prompts/: chat_prompt.md  chat_prompt_2.md  image_prompt.md  notification_prompt.md
app/routes/: route.py
app/services/: lg_service.py  lg_services.py  llm.py  supabase_service.py
app/utils/: prompt_utils.py
