[project]
name = "fys-backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ronakrpanchal", email = "rhtpanchal76@gmail.com"},
]
dependencies = [
    "langchain-core",
    "langchain-groq",
    "pydantic",
    "fastapi[standard]>=0.115.12",
    "python-dotenv",
    "pydantic-settings>=2.9.1",
    "openai>=1.82.1",
    "itsdangerous>=2.2.0",
    "supabase>=2.15.2",
    "jinja2>=3.1.6",
    "httpx>=0.28.1",
    "h2>=4.2.0",
    "langgraph>=0.4.8",
    "sse-starlette>=2.3.6",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "uvicorn app.main:app --reload"


[tool.pdm]
distribution = false
